// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NestedList.svelte > should render empty nested list 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
/>
`;

exports[`NestedList.svelte > should render nested items 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="expand"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="closed"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          a
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      />
      
       
      <item>
        
         
        <p>
          b
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="2"
    id="id-2"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="expand"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="closed"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          c
        </p>
        
      </item>
    </div>
     
     
  </node>
</nested-list>
`;

exports[`NestedList.svelte > should render open items 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="true"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="collapse"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="opened"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-opened"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          a
        </p>
        
      </item>
    </div>
     
    <nested-list
      class="nested-list flex flex-col w-full list"
      role="tree"
    >
      <node
        aria-expanded="false"
        aria-selected="false"
        class="node min-h-5 flex flex-col cursor-pointer select-none"
        data-path="0,0"
        id="id-0-0"
        role="treeitem"
      >
        <div
          class="flex flex-row items-center"
        >
          <span
            class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
          >
            <i
              class="border-r"
            />
             
            <i
              class="border-b"
            />
            
          </span>
          
          <span
            class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
          />
          
           
          <item>
            
             
            <p>
              aa
            </p>
            
          </item>
        </div>
         
         
      </node>
    </nested-list>
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      />
      
       
      <item>
        
         
        <p>
          b
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="2"
    id="id-2"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="expand"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="closed"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          c
        </p>
        
      </item>
    </div>
     
     
  </node>
</nested-list>
`;

exports[`NestedList.svelte > should render using default field mapping 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      />
      
       
      <item>
        
         
        <p>
          a
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      />
      
       
      <item>
        
         
        <p>
          b
        </p>
        
      </item>
    </div>
     
     
  </node>
</nested-list>
`;

exports[`NestedList.svelte > should render using field mappings 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      />
      
       
      <item>
        
         
        <p>
          a
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      />
      
       
      <item>
        
         
        <p>
          a
        </p>
        
      </item>
    </div>
     
     
  </node>
</nested-list>
`;

exports[`NestedList.svelte > should render with hierarchy 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="true"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0,0"
    id="id-0-0"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="collapse"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="opened"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-opened"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          a
        </p>
        
      </item>
    </div>
     
    <nested-list
      class="nested-list flex flex-col w-full list"
      role="tree"
    >
      <node
        aria-expanded="false"
        aria-selected="false"
        class="node min-h-5 flex flex-col cursor-pointer select-none"
        data-path="0,0,0"
        id="id-0-0-0"
        role="treeitem"
      >
        <div
          class="flex flex-row items-center"
        >
          <span
            class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
          >
            <i
              class="border-r"
            />
             
            <i
              class="border-b"
            />
            
          </span>
          
          <span
            class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
          />
          
           
          <item>
            
             
            <p>
              aa
            </p>
            
          </item>
        </div>
         
         
      </node>
    </nested-list>
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0,1"
    id="id-0-1"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      />
      
       
      <item>
        
         
        <p>
          b
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0,2"
    id="id-0-2"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="expand"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="closed"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          c
        </p>
        
      </item>
    </div>
     
     
  </node>
</nested-list>
`;

exports[`NestedList.svelte > should render with hierarchy 2`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="true"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0,0,0"
    id="id-0-0-0"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="collapse"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="opened"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-opened"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          a
        </p>
        
      </item>
    </div>
     
    <nested-list
      class="nested-list flex flex-col w-full list"
      role="tree"
    >
      <node
        aria-expanded="false"
        aria-selected="false"
        class="node min-h-5 flex flex-col cursor-pointer select-none"
        data-path="0,0,0,0"
        id="id-0-0-0-0"
        role="treeitem"
      >
        <div
          class="flex flex-row items-center"
        >
          <span
            class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
          >
            <i
              class="border-r"
            />
             
            <i
              class="border-b"
            />
            
          </span>
          
          <span
            class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
          />
          
           
          <item>
            
             
            <p>
              aa
            </p>
            
          </item>
        </div>
         
         
      </node>
    </nested-list>
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0,0,1"
    id="id-0-0-1"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      />
      
       
      <item>
        
         
        <p>
          b
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0,0,2"
    id="id-0-0-2"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="expand"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="closed"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          c
        </p>
        
      </item>
    </div>
     
     
  </node>
</nested-list>
`;

exports[`NestedList.svelte > should support custom icons 1`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="expand"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="closed"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          a
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      />
      
       
      <item>
        
         
        <p>
          b
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="2"
    id="id-2"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="expand"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="closed"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          c
        </p>
        
      </item>
    </div>
     
     
  </node>
</nested-list>
`;

exports[`NestedList.svelte > should support custom icons 2`] = `
<nested-list
  class="nested-list flex flex-col w-full list"
  role="tree"
>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="0"
    id="id-0"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="expand"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="closed"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          a
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="1"
    id="id-1"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <span
        class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
      />
      
       
      <item>
        
         
        <p>
          b
        </p>
        
      </item>
    </div>
     
     
  </node>
  <node
    aria-expanded="false"
    aria-selected="false"
    class="node min-h-5 flex flex-col cursor-pointer select-none"
    data-path="2"
    id="id-2"
    role="treeitem"
  >
    <div
      class="flex flex-row items-center"
    >
      <icon
        aria-label="expand"
        class="flex flex-shrink-0 items-center justify-center small w-4"
        data-state="closed"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
      </icon>
      
       
      <item>
        
         
        <p>
          c
        </p>
        
      </item>
    </div>
     
     
  </node>
</nested-list>
`;
